manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/part-of: hugin
  name: dev
spec: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: hugin-svc
    app.kubernetes.io/part-of: hugin
  name: hugin-svc
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: hugin-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: hugin-app
    app.kubernetes.io/part-of: hugin
  name: hugin-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hugin-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hugin-app
    spec:
      containers:
      - env:
        - name: SPRING_CLOUD_KUBERNETES_CLIENT_NAMESPACE
          valueFrom:
            configMapKeyRef:
              key: spring.cloud.kubernetes.client.namespace
              name: hugin-cm
        - name: MY_VAR
          valueFrom:
            configMapKeyRef:
              key: my-var
              name: hugin-cm
        image: dummy.io/hugin/dev-hugin:0.0.1-SNAPSHOT-d7b368b
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: hugin
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp
          name: hugin-tmp-dir
      serviceAccountName: hugin-sa
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 500Mi
        name: hugin-tmp-dir
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: hugin-ingress
    app.kubernetes.io/part-of: hugin
  name: hugin-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: hugin-dev.test
    http:
      paths:
      - backend:
          service:
            name: hugin-svc
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
